--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,79 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Titillium Web", sans-serif;
+}
+
+header {
+    background-color: #2A2A2A;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+    i{
+        color: #ffffff;
+    }
+
+    ul {
+        display: none;
+    }
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+
+    div {
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        box-shadow: black 2px 3px 5px;
+        width: 80%;
+        gap: 1rem;
+
+        transition: 0.5s ease-in-out;
+        &:hover{
+            div{
+
+                background-color: green;
+            }
+            img{
+                transition: 0.3s ease-in-out;
+                transform: rotate(-20deg);
+                scale: 1.1;
+            }
+        }
+        
+        p{
+            width: 90%;
+            font-size: 18px;
+        }
+
+        img {
+            width: 200px;
+        }
+
+        div{
+            background-color: #373737;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            color: #ffffff;
+            font-weight: 700;
+            margin-bottom: 20px;
+
+        }
+    }
+}
+
+footer{
+    margin-bottom: 50px;
 }
