--- a/CSS/main.css
+++ b/CSS/main.css
@@ -35,9 +35,10 @@ main {
         align-items: center;
         justify-content: center;
         text-align: center;
-        box-shadow: black 2px 3px 5px;
+        box-shadow: rgba(0, 0, 0, 0.104) 1px  1px 5px;
         width: 80%;
         gap: 1rem;
+        border-radius: 2%;
 
         transition: 0.5s ease-in-out;
         &:hover{
@@ -61,7 +62,7 @@ main {
             width: 200px;
         }
 
-        div{
+         div{
             background-color: #373737;
             width: 50px;
             height: 50px;
@@ -69,6 +70,7 @@ main {
             color: #ffffff;
             font-weight: 700;
             margin-bottom: 20px;
+            box-shadow: none;
 
         }
     }
